--- a/Index.html
+++ b/Index.html
@@ -1,21 +1,54 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
-<h1>Fanpage Paddington</h1>
+    <title>Fanpage Paddington</title>
+    
+  </head>
 
-<p style="color:rgb(0, 4, 255);">Welkom op de Paddington fanpagina!</p>
-<h2> Paddington - A little bear will make a big splash</h2>
-<img src="Assets/Paddington 1.jpeg" alt=">Paddington 1 affiche" width="104" height="142">
-<p>A young Peruvian bear travels to London in search of a home. Finding himself lost and alone at Paddington Station, he meets the kindly Brown family, who offer him a temporary haven.</p>
-<h2>Paddington 2</h2>
-<img src="Assets/Paddington 2.jpg" 
-alt="Paddington 2 affiche" width="104" height="142">
-<p>Paddington, now happily settled with the Brown family and a popular member of the local community, picks up a series of odd jobs to buy the perfect present for his Aunt Lucy's 100th birthday, only for the gift to be stolen.</p>
-<h3>🥪 👜 Ma'amalade sandwich Your Majesty?</h3>
-<video width="320" height="240" controls>
-<source src="Assets/Video P.mp4" video/mp4">
-</video>
-<p>The Queen and Paddington Bear get the Platinum Party at the Palace rocking.</p>
-</body>
+  <body>
+    <!-- Here is our main header that is used across all the pages of our website -->
+
+    <header>
+      <h1> Welcome to the Paddington fan page! </h1>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Paddington - A little bear will make a big splash</a></li>
+        <li><a href="#">Paddington 2</a></li>
+        <li><a href="#">🥪 👜 Ma'amalade sandwich Your Majesty?</a></li>
+      </ul>
+
+    <main>
+      <article>
+        <h2>Paddington - A little bear will make a big splash</h2>
+        <img src="Assets/Paddington 1.jpeg" alt=">Paddington 1 affiche" width="104" height="142">
+        <p>
+          A young Peruvian bear travels to London in search of a home. Finding himself lost and alone at Paddington Station, he meets the kindly Brown family, who offer him a temporary haven.
+        </p>
+     
+
+        <h3>Paddington 2</h3>
+        <img src="Assets/Paddington 2.jpg" alt="Paddington 2 affiche" width="104" height="142">
+        <p>
+          Paddington, now happily settled with the Brown family and a popular member of the local community, picks up a series of odd jobs to buy the perfect present for his Aunt Lucy's 100th birthday, only for the gift to be stolen.
+        </p>
+
+        <h3>🥪 👜 Ma'amalade sandwich Your Majesty?</h3>
+        <video width="320" height="240" controls>
+            <source src="Assets/Video P.mp4" video/mp4">
+            </video>
+        <p>
+          The Queen and Paddington Bear get the Platinum Party at the Palace rocking.
+        </p>
+      </article>
+    </main>
+    <footer>
+      <p>©Copyright 2050 by nobody. All rights reversed.</p>
+    </footer>
+  </body>
 </html>
