--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
     <main>
       <article>
         <h2>Paddington - A little bear will make a big splash</h2>
-        <img> src="Assets/Paddington 1.jpeg" alt=">Paddington 1 affiche" width="104" height="142"<img>
+        <img src="Assets/Paddington 1.jpeg" alt=">Paddington 1 affiche" width="104" height="142">
         <p>
           A young Peruvian bear travels to London in search of a home. Finding himself lost and alone at Paddington Station, he meets the kindly Brown family, who offer him a temporary haven.
         </p>
