--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
         </p>
         <!-- Wout hier-->
         <p> Wout geeft deze film 4 sterren! </p>
-        <img src="Assets/Paddington.png" alt="" width="104">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5EDHdbrAf2z-9agK2ClEw2ajex1OWsH2i8pEVGxoasIKp1vXO" alt="" width="104">
 
         <h3>Paddington 2</h3>
         <img src="Assets/Paddington 2.jpg" alt="Paddington 2 affiche" width="104" height="142">
