--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,10 @@
         <p>
           A young Peruvian bear travels to London in search of a home. Finding himself lost and alone at Paddington Station, he meets the kindly Brown family, who offer him a temporary haven.
         </p>
-     
+      <!-- Wout hier-->
+        <p> Wout geeft deze film 4 sterren! </p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5EDHdbrAf2z-9agK2ClEw2ajex1OWsH2i8pEVGxoasIKp1vXO" alt="" width="104">
+
 
         <h3>Paddington 2</h3>
         <img src="Assets/Paddington 2.jpg" alt="Paddington 2 affiche" width="104" height="142">
