--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width" />
 
     <title>Fanpage Paddington</title>
-    
+    <style>
+      body{background-color:cornflowerblue}
+    </style>
   </head>
 
   <body>
