--- a/Index.html
+++ b/Index.html
@@ -6,17 +6,17 @@
 
     <title>Fanpage Paddington</title>
     <style>
-      body{background-color:cornflowerblue}
+      body{background-color:lightcyan}
     </style>
   </head>
 
   <body>
     <!-- Here is our main header that is used across all the pages of our website -->
-
+<center>
     <header>
       <h1> Welcome to the Paddington fan page! </h1>
     </header>
-
+  </center>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -44,7 +44,7 @@
         </p>
 
         <h3>🥪 👜 Ma'amalade sandwich Your Majesty?</h3>
-        <video width="320" height="240" controls>
+        <video width="320" height="auto" controls>
             <source src="Assets/Video P.mp4" video/mp4">
             </video>
         <p>
@@ -53,7 +53,7 @@
       </article>
     </main>
     <footer>
-      <p>©Copyright 2050 by nobody. All rights reversed.</p>
+      <p>©Copyright 2050 by nobody. All right      ss reversed.</p>
     </footer>
   </body>
 </html>
