--- a/Index.html
+++ b/Index.html
@@ -47,10 +47,13 @@
             <source src="Assets/Video P.mp4" video/mp4">
             </video>
         <p>
-          The Queen and Paddington Bear get the Platinum Party at the Palace rocking.
+          The DEAD Queen and Paddington Bear get the Platinum Party at the Palace rocking.
         </p>
         <!-- Wout hier-->
-        <p> Wout geeft deze film 4 sterren! </p>
+        <video width="200" height="auto" controls>
+        <source src="assets/yt5s.io-😯💨 Enzo Knol pakt vape af van 14-jarig meisje .mp4">
+    </video>
+        <p> Wout geeft deze film 4 sterren! Dat zijn 4 sterren meer dan dat Wout de printer laptops geeft</p>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5EDHdbrAf2z-9agK2ClEw2ajex1OWsH2i8pEVGxoasIKp1vXO" alt="" width="104">
       </article>
     </main>
